trzecia wersja gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ Icon\r\r
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
-#tu cos nie działało
+.com.apple.timemachine.donotpresent
 .AppleDB
 .AppleDesktop
 Network Trash Folder
