--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,6 @@ jobs:
     - name: Test with pytest
       run: |
         python -m unittest test_kruskal.py
+        python -m unittest test_christofides.py
+        python -m unittest test_graph.py
+        python -m unittest test_app.py
